fix: fix pieces width on Safari

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -170,6 +170,7 @@ div > span.pieces {
   border-radius: 8px;
   text-align: center;
   font-size: 1rem;
+  width: auto;
 }
 
 body {
