--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -65,5 +65,6 @@ div {
     border-radius: 8px;
     text-align: center;
     font-size: 1rem;
+    width: auto;
   }
 }
